--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "5.0.1",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/http": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-advanced-http": "^1.9.0",
     "cordova-plugin-geolocation": "^3.0.0",
     "geolocation-marker": "^2.0.5",
     "ionic-angular": "3.9.2",
@@ -40,7 +42,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-advanced-http": {}
     }
   }
 }
