--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/http": "^4.4.2",
+    "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-plugin-advanced-http": "^1.9.0",
     "cordova-plugin-geolocation": "^3.0.0",
+    "cordova-plugin-nativegeocoder": "^2.0.4",
     "geolocation-marker": "^2.0.5",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -43,7 +45,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-nativegeocoder": {}
     }
   }
 }
